--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comp308-w2019-midterm-300942719",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node server.js"
@@ -17,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
@@ -54,8 +55,5 @@
   ],
   "author": "Maninderpal Singh",
   "license": "ISC",
-  "bugs": {
-    "url": ""
-  },
   "homepage": ""
 }
